tests/paczka2/big_fuzzy/81937647.err
Error in line 1: YRMcYqtyw A507 69,1
Error in line 3: YRMcYqtyw A23 89,9
Error in line 5: YRMcYqtyw A507 29,9
Error in line 4: hBbkfPk A645 69,8
Error in line 18: F0yo29zlz A645 347,8
Error in line 24: YRMcYqtyw S832 30,7
Error in line 33: YRMcYqtyw A23 60,3
Error in line 28: 0RZpVzW A645 184,2
Error in line 46: F0yo29zlz A507 52,2
Error in line 62: YRMcYqtyw A23 405,1
Error in line 71: zPK65Ch S832 6,1
Error in line 74: A23 A23 87,8
Error in line 76: F0yo29zlz A507 79,6
Error in line 98: A23 A645 47,O
Error in line 96: Npq S832 74,6
Error in line 108: zPK65Ch A645 -2,3
Error in line 111: hBbkfPk A507 70,0
Error in line 113: Npq A23 29,5
Error in line 123: hBbkfPk A23 65,5
Error in line 116: 0RZpVzW A507 98,2
Error in line 131: 0RZpVzW A645 7,5
Error in line 142: zPK65Ch A645 132,8
Error in line 145: zPK65Ch A507 43,6
Error in line 150: Npq A23 99,2
Error in line 162: 0RZpVzW S832 261,5
Error in line 161: YRMcYqtyw S832 96,0
Error in line 168: 0RZpVzW A23 87,3
Error in line 182: A23 A507 34,7
Error in line 196: YRMcYqtyw A23 37,9
Error in line 199: YRMcYqtyw A64 69,9
Error in line 203: YRMcYqtyw A645 99,7
Error in line 205: YRMcYqtyw S832 65,1
Error in line 223: hBbkfPk S83^ 90,6
Error in line 217: hBbkfPk A507 59,2
Error in line 204: A23 A507 44,9
Error in line 219: YRMcYqtyw A23 64,2
Error in line 225: hBbkfPk S832 194,8
